# HexForge

./: .gitignore  CMakeLists.txt  Hexahedron.sln  README.md
.github/workflows/: cmake-platform.yml  cmake-single-platform.yml
Hexahedron/: Hexahedron.vcxproj  Hexahedron.vcxproj.filters
Hexahedron/include/Engine/: Application.h
Hexahedron/include/Renderer/: Camera.h  Mesh.h  Primitives.h  Renderer.h  Shader.h
Hexahedron/lib/: glew32s.lib
Hexahedron/src/Engine/: Application.cpp
Hexahedron/src/Renderer/: Camera.cpp  Mesh.cpp  Primitives.cpp  Renderer.cpp  Shader.cpp
Sandbox/: Sandbox.vcxproj
Sandbox/resources/shaders/: debug.frag  debug.vert  line.frag  line.vert
Sandbox/src/: Main.cpp
engine/: CMakeLists.txt
engine/include/HexForge/: pch.h
engine/include/HexForge/Core/: Application.h  Logger.h  ResourceManager.h  UIManager.h
engine/include/HexForge/Gameplay/: EntityComponents.h  EntityManager.h  InputManager.h
engine/include/HexForge/Physics/: PhysicsSystem.h
engine/include/HexForge/Renderer/: Camera.h  Renderer.h  Shader.h
engine/include/HexForge/Renderer/Data/: Material.h  Model.h  ScreenQuad.h  Texture.h
engine/src/Core/: Application.cpp  Console.cpp  Logger.cpp  ResourceManager.cpp  UIManager.cpp
engine/src/Gameplay/: EntityManager.cpp  InputManager.cpp
engine/src/Physics/: PhysicsSystem.cpp
engine/src/Renderer/: Camera.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp
engine/src/Renderer/Data/: Material.cpp  Mesh.cpp  Model.cpp  Texture.cpp
examples/: CMakeLists.txt
examples/sandbox/: CMakeLists.txt  main.cpp
examples/sandbox/resources/shaders/: debug.frag  gradient.frag  line.frag  shadow.frag  shadow.vert
examples/sandbox/resources/textures/Onyx013_2K-PNG/: Onyx013_2K-PNG.mtlx  Onyx013_2K-PNG.usdc
examples/sandbox/resources/textures/PavingStones138_2K-PNG/: PavingStones138_2K-PNG.mtlx  PavingStones138_2K-PNG.usdc
include/: pch.h
include/Core/: Application.h  Console.h  Logger.h  ResourceManager.h
include/Engine/: Application.h  Console.h  Logger.h
include/Engine/ResourceManagement/: ResourceBase.h  ResourceManager.h  TextureResource.h
include/Gameplay/: EntityComponents.h  EntityManager.h
include/Renderer/: Camera.h  Mesh.h  Primitives.h  RenderStructs.h  Renderer.h  Shader.h  ShaderManager.h
include/Renderer/Data/: Material.h  Mesh.h  Model.h  RenderStructs.h  Texture.h
include/Renderer/Primitives/: CubeBatch.h  LineBatch.h  PrimitiveBase.h  ScreenQuad.h  SphereBatch.h
resources/shaders/: debug.frag  debug.vert  gradient.frag  gradient.vert  line.frag  line.vert  shadow.vert  shadow_cube.frag  shadow_cube.vert
resources/textures/Rock061_2K-JPG/: Rock061_2K-JPG.mtlx  Rock061_2K-JPG.usdc
src/: main.cpp
src/Core/: Application.cpp  Console.cpp  Logger.cpp  ResourceManager.cpp
src/Engine/: Application.cpp
src/Engine/ResourceManagement/: ResourceManager.cpp
src/Gameplay/: EntityManager.cpp
src/Renderer/: Camera.cpp  Mesh.cpp  Primitives.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp
src/Renderer/Data/: Material.cpp  Mesh.cpp  Model.cpp  Texture.cpp
src/Renderer/Primitives/: CubeBatch.cpp  LineBatch.cpp  PrimitiveBase.cpp  SphereBatch.cpp
